Closed Bug 1496834 Opened 6 years ago Closed 5 years ago

Windows 10 ToastNotifications do not focus Firefox when clicked

Categories

(Toolkit Graveyard :: Notifications and Alerts, defect, P1)

Unspecified
Windows 10
defect

Tracking

(firefox-esr60 unaffected, firefox-esr68 disabled, firefox63 unaffected, firefox64 disabled, firefox65- disabled, firefox66- disabled, firefox67- disabled, firefox68 disabled, firefox69 disabled, firefox70 disabled, firefox71 verified)

VERIFIED FIXED
mozilla71
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- disabled
firefox63 --- unaffected
firefox64 --- disabled
firefox65 - disabled
firefox66 - disabled
firefox67 - disabled
firefox68 --- disabled
firefox69 --- disabled
firefox70 --- disabled
firefox71 --- verified

People

(Reporter: bytesized, Assigned: m_kato)

References

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:
1) Open IRCCloud in Firefox Nightly on Windows 10
2) Switch to another tab
3) Wait to receive a ToastNotification from IRCCloud (when a user messages you, or when a channel you get notifications on gets a message)
4) Click the notification
5) Firefox switches to the IRCCloud tab
6) Start typing a reply

Expected result:
Typed reply text will display in the "send message" input box

Actual result:
Nothing displays in the "send message" input box because the Firefox window does not have focus.
[Tracking Requested - why for this release]: regression in usability of desktop notifications.

This functionality was added in bug 853972 (Firefox 29) but was now regressed by bug 1155505. Please make sure to update the test at https://searchfox.org/mozilla-central/source/browser/base/content/test/alerts/browser_notification_tab_switching.js to cover the native notifications.
Flags: needinfo?(m_kato)
Keywords: regression
Toast Notification isn't turn on 64 release, so this isn't blocker for 64.

And our unit test cannot use OS's toast because native toast requires AppId in shortcut file (it requires installer build that is *.exe)
Assignee: nobody → m_kato
Flags: needinfo?(m_kato)
Depends on: 1497425
Blocks: 1497425
No longer depends on: 1497425
I guess that clicking notification causes that application focus is switched.  So we need set focus to Firefox again for windows.  bug 853972's fix uses fm.setActiveWindow, but the latest code doesn't use it.  So firefox cannot take window focus...
That change was bug 960997
Status: NEW → ASSIGNED
Priority: -- → P1
Tracking this to make sure and follow up for 66 and possibly for 65.
This feature is Nightly-only, so no need to track for 65.

This bug is relevant to Slack to (in 67 nightly).

Any news here?

Is it so difficult to add some focus request?

When clicking native toast on Windows 10, focus moves to another process,
So we have to set focus on Firefox process.

Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/b296f51555f8
Set focus on Firefox since focus is moved to another process. r=aklotz
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71

I have reproduced this issue in Nightly v71.0a1 from 2019-10-01 and verified it in Nightly v71.0a1 from 2019-10-08 in Windows 10.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Product: Toolkit → Toolkit Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: