Bug 1496834 - Set focus on Firefox since focus is moved to another process. r=aklotz

When clicking native toast on Windows 10, focus moves to another process,
So we have to set focus on Firefox process.

Differential Revision: https://phabricator.services.mozilla.com/D47398